--- a/package.json
+++ b/package.json
@@ -1,16 +1,35 @@
 {
-  "name": "mastercsconcepts",
+  "name": "csinout",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://georgian4049.github.io/mastercsconcepts",
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
+    "date-fns": "^2.16.1",
     "gh-pages": "^3.1.0",
+    "highcharts": "^8.2.0",
+    "highcharts-3d": "^0.1.7",
+    "highcharts-react-official": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "material-table": "^1.69.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.11.4",
+    "react-iframe": "^1.8.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-swipeable-views": "^0.13.9",
+    "react-twitter-embed": "^3.0.3",
+    "react-uuid": "^1.0.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
