--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-swipeable-views": "^0.13.9",
-    "react-twitter-embed": "^3.0.3",
     "react-uuid": "^1.0.2",
     "redux-thunk": "^2.3.0",
+    "suneditor-react": "^2.15.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -63,5 +63,25 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@editorjs/checklist": "^1.3.0",
+    "@editorjs/code": "^2.6.0",
+    "@editorjs/delimiter": "^1.2.0",
+    "@editorjs/editorjs": "^2.19.1",
+    "@editorjs/embed": "^2.4.0",
+    "@editorjs/header": "^2.6.1",
+    "@editorjs/image": "^2.6.0",
+    "@editorjs/inline-code": "^1.3.1",
+    "@editorjs/link": "^2.3.1",
+    "@editorjs/list": "^1.6.2",
+    "@editorjs/marker": "^1.2.2",
+    "@editorjs/paragraph": "^2.8.0",
+    "@editorjs/quote": "^2.4.0",
+    "@editorjs/raw": "^2.3.0",
+    "@editorjs/simple-image": "^1.4.0",
+    "@editorjs/table": "^1.3.0",
+    "@editorjs/warning": "^1.2.0",
+    "react-editor-js": "^1.9.0"
   }
 }
