--- a/package.json
+++ b/package.json
@@ -19,10 +19,6 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "draftjs-to-markdown": "^0.6.0",
-    "gh-pages": "^3.1.0",
-    "highcharts": "^8.2.0",
-    "highcharts-3d": "^0.1.7",
-    "highcharts-react-official": "^3.0.0",
     "html-to-draftjs": "^1.5.0",
     "jsonwebtoken": "^8.5.1",
     "material-table": "^1.69.2",
@@ -37,7 +33,6 @@
     "react-swipeable-views": "^0.13.9",
     "react-uuid": "^1.0.2",
     "redux-thunk": "^2.3.0",
-    "suneditor-react": "^2.15.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -47,17 +42,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": ["react-app", "react-app/jest"]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
